--- a/3-maquetacion-cv/3-maquetacion-cv/estilos.css
+++ b/3-maquetacion-cv/3-maquetacion-cv/estilos.css
@@ -1,13 +1,27 @@
 p {
     color: rgb(79, 44, 4) 
 }
+h1 {text-align: center;
+font-size: 60px;
+color: #764a08;
+}
+
+
+
+.linea {
+    border-top: 2px solid rgb(67, 48, 4);
+    height: 50px;
+    max-width: 1500px;
+    padding: 0;
+    margin: 10px auto 0 auto;
+  }
+
+img{display: block; margin: auto;}
 
 body {
-    background-color: rgb(248, 248, 207);
+    background-color: rgb(248, 248, 222);
 width: 900px;
 margin:auto;
 padding: 20px 50px 20px;
-border: 5px solid rgb(255, 237, 146);
-
-
 }
+
